--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "intersection-observer": "^0.5.1",
     "prop-types": "^15.6.2",
     "react": "^16.8.6",
+    "react-awesome-slider": "^1.0.1",
     "react-dom": "^16.8.6",
+    "react-grid-gallery": "^0.5.5",
     "react-helmet": "^5.2.0",
     "react-pose": "^4.0.5",
     "styled-components": "^4.1.3"
